--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<title>gh-pages template</title>
 </head>
 <body>
-  <div id="helloworld">Dieses ist eine Testseite!</div>
+  <div id="helloworld">Dieses ist eine Testseite!!</div>
 </body>
 </html>
